---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock) -> bool {
    reg(clk) (sample_i, audio_val): (int<9>, int<16>) = {
        true
    };

    true
}


error: Expected type (int<9>, int<16>), got bool
  ┌─ testinput:2:57
  │  
2 │       reg(clk) (sample_i, audio_val): (int<9>, int<16>) = {
  │                                       ----------------- Type (int<9>, int<16>) inferred here
  │ ╭─────────────────────────────────────────────────────────^
3 │ │         true
  │ │         ---- Type bool inferred here
4 │ │     };
  │ ╰─────^ Expected (int<9>, int<16>)
  │  
  = note: Expected: (int<9>, int<16>)
               Got: bool
